link to github profile. Avoiding button overflow on warnings

--- a/style.css
+++ b/style.css
@@ -40,11 +40,12 @@ body {
 
 .submitDiv {
     grid-area: d;
+    margin-top: 3%;
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
-    height: 100%;
+    height: 50px;
     min-width: 20px;
 }
 
@@ -136,6 +137,7 @@ span {
 @media (min-width: 521px) and (max-width: 1200px){
     .wrapper {
         width: 90vw;
+        min-height: 550px;
     }
 }
 
@@ -146,6 +148,10 @@ span {
 
     input::placeholder {
         font-size: 1.3rem;
+    }
+
+    #submit {
+        height: 70px;
     }
 
     .bottom {
@@ -161,6 +167,7 @@ span {
 
     input {
         padding-left: 0;
+        text-align: center;
     }
 
     input::placeholder {
